--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "divi-scripts": "1.0.1",
+    "divi-scripts": "1.0.2-rc.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
